--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+    margin: 0;
+}
+
+.container {
+    width: 100vw;
+    height: 749px;
+    background-color: #000;
+}
+
+.wrapper {
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/background.png);
+    background-size: contain;
+    background-position: right;
+    background-repeat: no-repeat
+}
