--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+:root {
+    --one-color: #FF4B32;
+    --two-color: #ffff;
+    --third-color: #000;
+}
 
 body {
     margin: 0;
@@ -8,13 +13,44 @@ body {
     width: 100vw;
     height: 749px;
     background-color: #000;
-}
-
-.wrapper {
-    width: 100%;
-    height: 100%;
     background-image: url(../images/background.png);
     background-size: contain;
     background-position: right;
-    background-repeat: no-repeat
+    background-repeat: no-repeat;
+    color: var(--two-color);
+}
+
+.header {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 50px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    color: var(--one-color);
+}
+
+.nav-list {
+    display: flex;
+}
+
+.nav-list__link {
+    list-style-type: none;
+}
+
+.nav-list__item {
+    margin-right: 45px;
+    text-decoration: none;
+    font-family: "Open Sans", sans-serif;
+    font-size: 18px;
+    font-weight: 200;
+    color: var(--two-color);
+    opacity: .6;
+}
+
+.nav-list__item:hover {
+    font-weight: 700;
+    color: var(--one-color);
 }
