--- a/styles/section-4-5.css
+++ b/styles/section-4-5.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap') ;
 /*NEWS****************************/
 .wrapper{
     width: 1146px;
@@ -8,19 +9,20 @@
     padding-bottom: 140px;
     display: flex;
     flex-direction: column;
-    color: #000000;
     font-family: "Open Sans", sans-serif;
     font-style: normal;
+}
+.news>*{
+    color: #000000;
 }
 .news__h2{
     font-family: "Josefin Sans", sans-serif;
     font-size: 43px;
-    font-weight: 600
+    font-weight: 600;
 }
 .news__items{
     display: flex;
     justify-content: space-between;
-
 }
 .news__item{
     width: 362px;
@@ -70,7 +72,9 @@ footer.footer-black{
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    opacity: .7;
+    /*opacity: .7;*/
+    /*background: none;*/
+    display: block;
 }
 footer.footer-black ul{
     margin: 0;
@@ -79,6 +83,7 @@ footer.footer-black ul{
 footer.footer-black a{
     text-decoration: none;
     color: #fff;
+    opacity: 1;
 }
 .footer-black-list-wrapper{
     display: flex;
@@ -106,6 +111,9 @@ footer.footer-black a{
 }
 .footer-black__list{
     min-width: 25%;
+    display: block;
+    gap: normal;
+    height: auto;
 }
 .social-list{
     list-style-type: none;
@@ -161,4 +169,7 @@ footer.footer-black a{
 }
 .footer-black__list-item p{
     width: 250px;
+}
+.social-list__wrapper-img img{
+    width: 40px;
 }
