--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,10 @@ body {
 
 .wrapper {
     width: 1440px;
+
+}
+
+.wrapper-header {
     height: 729px;
 }
 
@@ -73,7 +77,6 @@ body {
 }
 
 .nav-list__item {
-    /*margin: 0 2.5em 0 0;*/
     list-style-type: none;
 }
 
@@ -95,7 +98,6 @@ body {
 .description {
     width: 524px;
     height: 401px;
-    margin: 3em 3em;
     color: var(--white-color);
     position: absolute;
     bottom: 6em;
@@ -121,7 +123,7 @@ body {
 .description>button {
     padding: .8em 1.8em;
     font-family: "Open Sans", sans-serif;
-    font-size: 18px;
+    font-size: .9em;
     font-weight: 600;
     background-color: var(--orange-color);
     color: var(--white-color);
@@ -134,30 +136,24 @@ body {
 
 /*-----------------------------------------------------*/
 .offer {
-    /*width: 1200px;*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-content: center;*/
-    /*justify-content: space-around;*/
     margin: 140px 0 0 0;
-    padding: 0 147px;
 }
 
 .offer>h1 {
     padding: 0;
     color: var(--black-color);
     font-family: "Josefin Sans", sans-serif;
-    font-size: 43px;
+    font-size: 2.15em;
     font-weight: 600;
-    letter-spacing: 7px;
+    letter-spacing: .35em;
 }
 .p-bottom-h1 {
     width: 506px;
-    margin: 20px 0 0 0;
+    margin: 1em 0 0 0;
     padding: 0;
     color: var(--black-color);
     font-family: "Open Sans", sans-serif;
-    font-size: 18px;
+    font-size: .9em;
     font-weight: 400;
     opacity: .7;
 }
@@ -175,28 +171,30 @@ body {
 
 .coffe-bean__price {
     color: var(--black-color);
-    margin: 35px 0 0 0;
+    margin: 1.75em 0 0 0;
     padding: 0;
     font-family: "Josefin Sans", sans-serif;
-    font-size: 24px;
+    font-size: 1.2em;
     font-weight: 700;
 }
 
 .coffe-bean>h3 {
+    margin: .5em 0 0 0;
     color: var(--black-color);
     font-family: "Josefin Sans", sans-serif;
-    font-size: 32px;
+    font-size: 1.6em;
     font-weight: 600;
 }
 
 .coffe-bean:nth-child(2) {
-    margin: 0 92px;
+    margin: 0 4.6em;
 }
 
 .coffe-bean__desc {
+    margin: .5em 0 0 0;
     color: var(--black-color);
     font-family: "Open Sans",sans-serif;
-    font-size: 16px;
+    font-size: .8em;
     font-weight: 400;
     opacity: 0.6;
 }
