--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,6 @@ body {
 }
 
 .nav-item {
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,7 +82,7 @@ body {
 .nav-list__item>a {
     color: var(--white-color);
     font-family: "Open Sans", sans-serif;
-    font-size:.9em;
+    font-size: .9em;
     font-weight: 400;
     opacity: 0.6;
     text-decoration: none;
@@ -117,7 +116,6 @@ body {
     font-size: 1em;
     font-weight: 600;
     opacity: 0.8;
-
 }
 
 .description>button {
@@ -136,7 +134,7 @@ body {
 
 /*-----------------------------------------------------*/
 .offer {
-    margin: 140px 0 0 0;
+    margin: 7em 0 0 0;
 }
 
 .offer>h1 {
@@ -147,6 +145,7 @@ body {
     font-weight: 600;
     letter-spacing: .35em;
 }
+
 .p-bottom-h1 {
     width: 506px;
     margin: 1em 0 0 0;
@@ -159,6 +158,7 @@ body {
 }
 
 .coffe-beans {
+    margin: 3em 0 0 0;
     display: flex;
 }
 
@@ -191,6 +191,7 @@ body {
 }
 
 .coffe-bean__desc {
+    width: 257px;
     margin: .5em 0 0 0;
     color: var(--black-color);
     font-family: "Open Sans",sans-serif;
