--- a/styles/section-4-5.css
+++ b/styles/section-4-5.css
@@ -72,7 +72,7 @@
 /*FOOTER*************************/
 
 footer.footer-black{
-    padding: 70px 0 45px;
+    padding: 90px 0 45px;
     color: var(--white-color);
     font-family: "Open Sans", sans-serif;
     font-size: 18px;
@@ -81,7 +81,8 @@ footer.footer-black{
     display: block;
 }
 .container-footer-bg{
-    background: var(--black-color);
+    background-image: url("../images/footer-bg.png");
+    background-size: cover;
     height: auto;
 }
 footer.footer-black ul{
@@ -185,4 +186,10 @@ footer.footer-black a{
 }
 .footer-black__list-item_phone{
     margin-top: 30px;
+}
+.footer-black__list:last-child li:first-child{
+    margin-bottom: 40px;
+}
+.footer-black__list-item:last-child {
+    margin-bottom: 0;
 }
